fix: style (text color dark mode)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,7 +167,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    color: #043d75;
+    // color: #043d75;
     min-height: 100vh;
 }
 
